--- a/index.html
+++ b/index.html
@@ -1,27 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.2/build/pannellum.css"/>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pannellum@2.5.2/build/pannellum.js"></script>  
-  <style>
-    #panorama {
-        width: 600px;
-        height: 400px;
-    }
-  </style>
-</head>
-<body>
-  <input type="file" id="files" />
-  <div id="panorama"></div>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.2/build/pannellum.css"/>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pannellum@2.5.2/build/pannellum.js"></script>
+    <style>
+        .title {
+            background: #F0F0F0;
+            border-top: 3px solid #EBEBEB;
+            border-bottom: 1px solid #E1E1E1;
+            margin-bottom: 10px;
+            padding: 10px 0 11px;
+            text-align: center;
+            font-size: 20px;
+        }
 
-  <script src="main.js"></script>
-  <script>
-    document.getElementById('files').addEventListener('change', handleFileSelect, false)
-  </script>
+        .filedrop {
+            background: #F0F0F0;
+            text-align: center;
+            font-size: 16px;
+            border-top: 3px solid #EBEBEB;
+            border-bottom: 1px solid #E1E1E1;
+            margin-bottom: 10px;
+            padding: 50px 0 50px;
+            width: 100%;
+            max-width: 600px;
+            margin: 0 auto;
+            text-align: center;
+            border-radius: 6px;
+        }
 
-</body>
+        #panorama {
+            width: 100%;
+            height: 100%;
+        }
+
+        .panorama-container {
+            width: 600px;
+            max-width: 600px;
+            margin: 50px auto;
+        }
+
+        [style*="--aspect-ratio"] > :first-child {
+            width: 100%;
+        }
+        [style*="--aspect-ratio"] > img {  
+            height: auto;
+        } 
+        @supports (--custom:property) {
+            [style*="--aspect-ratio"] {
+                position: relative;
+            }
+            [style*="--aspect-ratio"]::before {
+                content: "";
+                display: block;
+                padding-bottom: calc(100% / (var(--aspect-ratio)));
+            }  
+            [style*="--aspect-ratio"] > :first-child {
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+            }  
+        }
+    </style>
+    </head>
+    <body>
+        <div class="title">
+            DJI Panorama Fixer
+        </div>
+        <div class="filedrop">
+            Drop image files here<br><br>
+            <input type="file" id="files"></input>
+        </div>
+        <div class="panorama-container" style="--aspect-ratio:16/9;">
+            <div id="panorama"></div>
+        </div>
+        
+
+        <script src="main.js"></script>
+        <script>
+            document.getElementById('files').addEventListener('change', handleFileSelect, false)
+        </script>
+    </body>
 </html>
+  
